mule-user-guide/v/3.8/hdfs-connector.adoc
=  Hadoop HDFS连接器
:keywords: anypoint studio, connectors, hdfs
：imagesdir：./_images

== 介绍

Hadoop分布式文件系统（HDFS）的Anypoint连接器用作Mule应用程序和HDFS之间的双向网关。

阅读本用户指南以了解如何使用连接器设置和配置基本流程。使用 link:/release-notes/hdfs-connector-release-notes[连接器发行说明]跟踪每个版本的连接器的功能添加，兼容性，限制和API版本更新。使用 http://mulesoft.github.io/mule-hadoop-connector/[技术参考]和https://www.anypoint.mulesoft.com/exchange/org.mule.modules/mule-module-hdfs/[Anypoint Exchange HDFS连接器]查看连接器操作和功能。

从版本5.0.0开始，MuleSoft会在 link:/mule-user-guide/v/3.8/anypoint-connectors#connector-categories[_选择_]支持策略下维护此连接器。

== 先决条件

本文档假定您熟悉Mule，
link:/mule-user-guide/v/3.8/anypoint-connectors[Anypoint连接器]和
link:/mule-fundamentals/v/3.8/anypoint-studio-essentials[Anypoint Studio Essentials]。要提高您对Studio的熟悉度，请考虑完成 link:/mule-fundamentals/v/3.8/basic-studio-tutorial[Anypoint Studio教程]。此页面需要一些 link:/mule-fundamentals/v/3.8/mule-concepts[骡子概念]， link:/mule-fundamentals/v/3.8/elements-in-a-mule-flow[骡子流中的元素]和 link:/mule-fundamentals/v/3.8/global-elements[全球元素]的基本知识。

要使用HDFS连接器，您需要：

*  *Anypoint Studio*  -  link:https://www.mulesoft.com/lp/dl/mule-esb-enterprise[Anypoint Studio]的一个实例。如果您不使用Anypoint Studio进行开发，请按照<<Configuring Maven Dependencies,Configuring Maven Dependencies>>中的说明执行您的项目。
* 启动并运行Hadoop分布式文件系统的一个实例。它可以从 link:http://hadoop.apache.org/releases.html[这里]下载。

[[requirements]]
=== 硬件和软件要求

有关硬件和软件要求，请访问 link:/mule-user-guide/v/3.8/hardware-and-software-requirements[硬件和软件要求]页面。

== 兼容性

HDFS Hadoop连接器与以下设备兼容：

[%header,width="100%",cols="50%,50%"]
|===
|应用/服务|版本
| Mule运行时 | 3.6或更新版本
| Apache Hadoop  | 2.7.1或更高版本
|===

[IMPORTANT]
从v5.0.0开始，HDFS连接器与其他 link:/mule-user-guide/v/3.8/anypoint-connectors#connector-categories[_选择_]连接器一样，均已通过Anypoint Platform进行商业授权许可。以前的版本将继续免费提供给社区。

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 配置连接器全局元素

要在Mule应用程序中使用HDFS连接器，您必须配置一个可供连接器使用的全局HDFS元素。 HDFS连接器提供以下全局配置选项，需要以下凭据：

=== 简单认证配置

[%header,width="100a",cols="50a,50a"]
|===
| {字段{1}}说明
| *NameNode URI*  |连接到的文件系统的URI。
[NOTE]
这将作为*FileSystem#FS_DEFAULT_NAME_KEY*配置条目传递给HDFS客户端。它可以被configurationResources和configurationEntries中的值覆盖。
| *Username*  |  Hadoop用于HDFS权限的用户身份。
[NOTE]
使用简单身份验证时，Hadoop要求将用户设置为名为HADOOP_USER_NAME的系统属性。如果您填写此字段，则连接器会为您设置，但您可以自行设置。如果该变量未设置，Hadoop将使用当前登录的OS用户。
| *Configuration Resources*  | HDFS客户端要加载的配置资源文件列表。在这里你可以提供额外的配置文件。 （例如core-site.xml）
| *Configuration Entries*  | HDFS客户端使用的配置条目的映射。在这里你可以提供额外的配置项作为键/值对。
|===

image:hdfs-config.png[HDFS-配置]


===  Kerberos身份验证配置

[%header,width="100a",cols="50a,50a"]
|===
| {字段{1}}说明
| *NameNode URI*  |连接到的文件系统的URI。
[NOTE]
这将作为*FileSystem#FS_DEFAULT_NAME_KEY*配置条目传递给HDFS客户端。它可以被configurationResources和configurationEntries中的值覆盖。
| *Username*  |  Kerberos负责人。
[NOTE]
这将作为"hadoop.job.ugi"配置条目传递给HDFS客户端。它可以被configurationResources和configurationEntries中的值覆盖。如果未提供，它将使用当前登录的用户。
| *KeytabPath*  |与用户名关联的 link:https://web.mit.edu/kerberos/krb5-1.12/doc/basic/keytab_def.html[keytab文件]的路径。
[NOTE]
KeytabPath用于从"Authorization server"获取TGT。如果未提供，它将在本地kerberos缓存中查找与用户名关联的TGT。
| *Configuration Resources*  | HDFS客户端要加载的配置资源文件列表。在这里你可以提供额外的配置文件。 （例如core-site.xml）
| *Configuration Entries*  | HDFS客户端使用的配置条目的映射。在这里你可以提供额外的配置项作为键/值对。
|===

image:hdfs-config-with-kerberos.png[HDFS-配置与 - 的Kerberos]

== 使用连接器

您可以使用此连接器作为入站端点，以可配置的速率（间隔）轮询文件的内容，或作为将数据操作到HDFS服务器的出站连接器。

[NOTE]
查看 http://mulesoft.github.io/mule-hadoop-connector/[HDFS Hadoop参考]中任何版本的连接器的完整操作列表。

=== 连接器命名空间和架构

在Studio中设计应用程序时，将连接器从调色板拖放到Anypoint Studio画布上的操作应自动使用连接器*namespace*和*schema location*填充XML代码。

*Namespace:* `+http://www.mulesoft.org/schema/mule/hdfs+` +
*Schema Location:* `+http://www.mulesoft.org/schema/mule/connector/current/mule-hdfs.xsd+`

[TIP]
如果您是在Studio的XML编辑器或其他文本编辑器中手动编码Mule应用程序，请在`<mule>`标记内*Configuration XML*的标题中定义名称空间和模式位置。

[source, xml,linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:connector="http://www.mulesoft.org/schema/mule/hdfs"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/connector
               http://www.mulesoft.org/schema/mule/connector/current/mule-hdfs.xsd">

      <!-- put your global configuration elements and flows here -->

</mule>
----

=== 在Mavenized Mule应用程序中使用连接器

如果您正在编写Mavenized Mule应用程序，则此XML片段必须包含在您的`pom.xml`文件中。

[source,xml,linenums]
----
<dependency>
  <groupId>org.mule.modules</groupId>
      <artifactId>mule-module-hdfs</artifactId>
      <version>5.0.0</version>
</dependency>
----

[TIP]
====
在`<version>`标签内，为最新版本提供所需的版本号，单词`RELEASE`，或者为最新版本提供`SNAPSHOT`。迄今为止的可用版本是：

*  *5.0.0*
*  *4.0.0*
*  *3.7.0*
*  *3.6.0*
====

使用连接器演示Mule应用程序== 

现有的演示演示如何以特定间隔使用 http://mulesoft.github.io/mule-hadoop-connector/[基本的文件系统操作]的连接器以及如何 http://mulesoft.github.io/mule-hadoop-connector/[轮询来自文件的数据]。

=== 示例用例

以下示例显示如何使用连接器将文本文件创建到HDFS中：

. 在Anypoint Studio中，单击文件>新建> Mule Project，命名该项目，然后单击确定。
. 在搜索字段中，键入"http"并将HTTP连接器拖到画布上，单击连接器配置右侧的绿色加号，然后在下一个屏幕中单击确定以接受默认设置。将端点命名为`/createFile`。
. 在搜索栏中输入"HDFS"并将HDFS连接器拖到画布上。按照解释<<Configure the Connector Global Element>>进行配置
. 选择写入路径作为操作。将路径设置为`/test.txt`（这是要创建到HDFS中的文件的路径），并将其他选项保留为默认值。
. 流程应如下所示：
+
image:create-file-flow.png[创建文件流]
+
. 运行应用程序。从您最喜欢的HTTP客户端发出带有"Content-type:plain/text"的POST请求到`locahost:8081/createFile`，并将您要写入的内容作为有效内容。 （例如`curl -X POST -H "Content-Type:plain/text" -d "payload to write to file" localhost:8090/createFile`）
. 使用Hadoop浏览器检查是否已创建*/test.txt*，并获取了您的内容。


=== 创建一个文件到HDFS中 -  XML

将其粘贴到Anypoint Studio中以与本指南中讨论的示例用例应用程序进行交互。

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:hdfs="http://www.mulesoft.org/schema/mule/hdfs" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/hdfs http://www.mulesoft.org/schema/mule/hdfs/current/mule-hdfs.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>
    <hdfs:config name="HDFS__Configuration" nameNodeUri="hdfs://localhost:9000" doc:name="HDFS: Configuration"/>
    <flow name="hdfs-example-use-caseFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/createFile" doc:name="HTTP"/>
        <hdfs:write config-ref="HDFS__Configuration" path="/test.txt" doc:name="HDFS"/>
    </flow>
</mule>
----

== 连接器性能

要手动定义连接器的连接配置文件，请访问连接器的适用全局元素中的*Pooling Profile*选项卡。

有关池的背景信息，请参阅 link:/mule-user-guide/v/3.8/tuning-performance[调整性能]。

== 资源

* 访问 link:/release-notes/hdfs-connector-release-notes[HDFS连接器发行说明]。
